vlib/v/checker/tests/expr_evaluated_but_not_used.out
vlib/v/checker/tests/expr_evaluated_but_not_used.vv:2:3: error: expression evaluated but not used
    1 | fn main() {
    2 |     {1, 2, 3, 4}
      |      ^
    3 |     println('works')
    4 | }
