vlib/v/checker/tests/expr_evaluated_but_not_used.vv
fn main() {
	{1, 2, 3, 4}
	println('works')
}
